--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,29 @@
-html,
-body,
-.root {
+@font-face {
+  font-family: 'Caveat';
+  src: url('./utils/fonts/Caveat-Regular.ttf');
+}
+
+html, body, .root {
   height: 100%;
+}
+
+h1, h2 {
+  font-family: 'Caveat';
 }
 
 body {
   line-height: 1.5;
 }
 
-body,
-.app {
-  background: white;
+body, .app {
+  background: #f5f5f5;
 }
 
 /* main page */
+
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background: #3f8fc8;
   text-align: center;
 }
 
@@ -60,7 +67,7 @@ body,
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32;
+  background: #3f8fc8;
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -70,6 +77,7 @@ body,
 }
 
 /* search page */
+
 .search-books-bar {
   position: fixed;
   width: 100%;
@@ -112,6 +120,7 @@ body,
 }
 
 /* books grid */
+
 .books-grid {
   list-style-type: none;
   padding: 0;
@@ -121,17 +130,12 @@ body,
   flex-wrap: wrap;
 }
 
-.books-grid li {
-  padding: 10px 15px;
-  text-align: left;
-}
 
 .book {
   width: 140px;
 }
 
-.book-title,
-.book-authors {
+.book-title, .book-authors {
   font-size: 0.8em;
 }
 
@@ -150,20 +154,6 @@ body,
   align-items: flex-end;
 }
 
-.book-shelf-changer {
-  position: absolute;
-  right: 0;
-  bottom: -10px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background: #60ac5d;
-  background-image: url('./icons/arrow-drop-down.svg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 20px;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-}
 
 .book-shelf-changer select {
   width: 100%;
@@ -173,6 +163,7 @@ body,
 }
 
 /* book cover */
+
 .book-cover {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   background: #eee;
