--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -2,6 +2,7 @@
    padding: 10px 30px;
    text-align: left;
    margin-right: 20px;
+   margin-bottom: 25px;
    background-color: #fff;
    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.11);
@@ -21,4 +22,59 @@
    background-position: center;
    background-size: 20px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+/* book cover */
+
+.book-cover {
+   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+   background: #eee;
+}
+
+.book-cover-title {
+   padding: 20px 10px 0;
+   text-align: center;
+   font-size: 0.8em;
+}
+
+/* books grid */
+
+.books-grid {
+   list-style-type: none;
+   padding: 0;
+   margin: 0;
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+}
+
+.book {
+   width: 140px;
+}
+
+.book-title,
+.book-authors {
+   font-size: 0.8em;
+}
+
+.book-title {
+   margin-top: 10px;
+}
+
+.book-authors {
+   color: #999;
+}
+
+.book-top {
+   position: relative;
+   height: 200px;
+   display: flex;
+   align-items: flex-end;
+}
+
+.book-shelf-changer select {
+   width: 100%;
+   height: 100%;
+   opacity: 0;
+   cursor: pointer;
 }
